--- a/_output.yml
+++ b/_output.yml
@@ -1,9 +1,11 @@
 bookdown::gitbook:
   css: style.css
   config:
+    toolbar:
+      position: static
     toc:
       before: |
-        <li><a href="./">A Minimal Book Example</a></li>
+        <li><a href="./">A Guide on Data Analysis</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf", "epub"]
