--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,3 +3,4 @@ delete_merged_file: true
 language:
   ui:
     chapter_name: "Chapter "
+edit: https://github.com/mikenguyen13/data_analysis/edit/main/%s
