--- a/_output.yml
+++ b/_output.yml
@@ -1,14 +1,21 @@
 bookdown::gitbook:
   css: style.css
+  split_by: section
   config:
-    toolbar:
-      position: static
     toc:
+      scroll_highlight: yes
+      sharing:
+        facebook: yes
+        github: yes
+        twitter: yes
+        linkedin: yes
+      info: yes
+      edit: yes
       before: |
         <li><a href="./">A Guide on Data Analysis</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    download: ["pdf", "epub"]
+    download: ["pdf", "epub","mobi"]
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
